# advent-of-code

./: CMakeLists.txt
2019/: CMakeLists.txt
2019/inputs/: 02.txt
2019/src/: main.cpp
2019/src/problems/: 01.h  02.h  03.h  04.h  05.h  07.h  09.h  10.h  11.h  12.h  13.h  14.h  15.h  16.h  17.h  18.h  19.h  20.h  22.h  23.h
2021/: CMakeLists.txt
2021/inputs/: 06.txt
2021/src/: main.cpp
2021/src/problems/: 01.h  02.h  03.h  04.h  06.h  08.h  21.h  24.h  25.h  all.h
app/: CMakeLists.txt
app/src/: everything.h  main.cpp
app/src/2021/: 01.h  02.h  03.h  04.h  05.h
lib/: CMakeLists.txt
lib/include/aoc/: conversion.h  io.h  problem.h
